# dimos

./: .codecov.yml  .coderabbit.yaml  .gitattributes  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  AGENTS.md  AI_POLICY.md  CONTRIBUTING.md  MANIFEST.in  README.md  default.env  flake.nix  pr_responses.yaml  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: _docker-build-template.yml  auto-merge.yml  autofix.yml  ci.yml  dimsim-check.yml  docker-build.yml  docs-validate.yml  macos.yml  pr-labels.yml  release.yml
data/dimos_office_mesh/: dimos_office_mesh.cook.json  dimos_office_mesh.json
dimos/: __init__.py  conftest.py  constants.py
dimos/agents/: annotation.py  capabilities.py  conftest.py  skill_result.py  system_prompt.py  test_annotation.py  test_capabilities.py  test_skill_result.py
dimos/codebase_checks/: test_get_logger.py  test_no_all.py  test_no_dunder_new.py  test_no_underscore_assign.py
dimos/control/: _control_test_helpers.py  components.py  coordinator.py  hardware_interface.py  path_following_coordinator.py  routing.py  task.py  test_control.py  test_coordinator_commands.py  test_coordinator_routing.py  test_path_following_coordinator.py  tick_loop.py
dimos/core/: _tls_preload.py  docker_module.py  global_config.py  library_config.py  module.py  native_module.py  resource.py  rpc_client.py  run_registry.py  test_async_module_dispatch_serialization.py  test_async_module_handles.py  test_async_module_main.py  test_async_module_process_observable.py  test_async_module_rpc.py  test_async_module_rpc_sync_to_async.py  test_cli_stop_status.py  test_core.py  test_daemon.py  test_e2e_daemon.py  test_mcp_integration.py  test_module_teardown.py  test_native_module.py  test_resource.py  test_stream.py  test_zenoh_transport.py  transport.py  transport_factory.py
dimos/e2e_tests/: conftest.py  dim_sim_client.py  dimos_cli_call.py  lcm_spy.py  test_control_coordinator.py  test_dimos_cli_e2e.py  test_dimsim_path_replaning.py  test_dimsim_spatial_memory.py  test_dimsim_walk_forward.py  test_go2_rerun_operator_stop.py  test_manipulation_planning_groups.py  test_person_follow.py  test_security_module.py
dimos/manipulation/: _test_manipulation_helpers.py  blueprints.py  manipulation_module.py  pick_and_place_module.py  skill_errors.py  test_generated_plan_materialization.py  test_manipulation_module.py  test_manipulation_monitor_preview.py  test_manipulation_unit.py  test_pick_and_place_unit.py  test_plan_execution_reservation.py  test_planning_factory.py  test_roboplan_world.py
dimos/mapping/: costmapper.py  relocalization.py  test_pgo.py  test_voxels.py  voxels.py
dimos/memory2/: backend.py  conftest.py  module.py  replay.py  test_e2e.py  test_module.py  test_registry.py  test_replay.py  test_store.py  test_stream.py  transform.py
dimos/models/: base.py  test_base.py
dimos/navigation/: base.py
dimos/navigation/nav_stack/modules/pgo/cpp/: CMakeLists.txt  flake.nix  main.cpp  scan_context.cpp  scan_context.h  simple_pgo.cpp  simple_pgo.h
dimos/navigation/nav_stack/modules/pgo_rust/rust/: Cargo.toml  build.rs  flake.nix
dimos/navigation/nav_stack/modules/pgo_rust/rust/src/: icp.rs  lcm_conv.rs  local_msgs.rs  main.rs  optimizer.rs  pgo.rs  scan_context.rs  voxel_grid.rs
dimos/navigation/nav_stack/modules/pgo_rust/rust/src/gtsam_ffi/: mod.rs  shim.cpp  shim.h
dimos/navigation/nav_stack/modules/rtab_map/cpp/: CMakeLists.txt  main.cpp
dimos/perception/: absence.py  demo_object_scene_registration.py  object_scene_registration.py  recall.py  scene_scan.py  spatial_perception.py  test_object_scene_registration_temporal.py  test_spatial_memory.py  test_spatial_memory_module.py  worldbelief_module.py  worldbelief_recorder.py
dimos/porcelain/: conftest.py  dimos.py  local_module_source.py  module_source.py  remote_module_source.py  skills_proxy.py  test_dimos.py  test_local_module_source.py  test_remote_module_source.py
dimos/project/: test_get_logger.py  test_no_sections.py
docs/: .mintignore  docs.json  introduction.mdx  package-lock.json  package.json  quickstart.mdx  requirements.md  requirements.mdx
native/rust/dimos-module/: Cargo.toml
native/rust/dimos-module/src/: lcm.rs  lib.rs  module.rs  transport.rs
scripts/: install.sh
tests/: test_dim893_webhook_confirmation.py
web/: README.md  deno.json
(+1188 files in other folders)
